force-app/main/default/objects/Account/fields/JIRA_Project_Lead__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Project_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JIRA Project Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>