force-app/main/default/objects/Account/fields/JIRA_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>JIRA_Project_Name__c</fullName>
    <label>JIRA Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>